Fixed this issue: Keep the entire alphabet across the top. Remove visibility of hyperlinks on the letters. Change the text color to a lighter color upon hovering to show a distinction.
Contributor Page Display: navigator function at the top of the page listing the alphabet to navigate to the contributors starting with that letter.

--- a/cccSite/account/static/account/signinstyle.css
+++ b/cccSite/account/static/account/signinstyle.css
@@ -60,6 +60,12 @@ form #input-submit:hover {
   font-size: 18px;
   font-weight: bold;
   color: #333;
+  text-decoration: none;
+  transition: color 0.2s ease;
+}
+
+.banner-letter:hover {
+  color: #777;
 }
 
 .testy {
